--- a/home.html
+++ b/home.html
@@ -62,7 +62,7 @@
 
       <!-- List -->
       <ul>
-        <li>Program IPA dan IPS</li>
+        <li>Program Komputer</li>
         <li>Kegiatan Ekstrakurikuler yang aktif</li>
         <li>Kerjasama dengan universitas ternama</li>
       </ul>
